# noise-lang

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  COMPARISON.md  CONTRIBUTE.md  Cargo.toml  GOAL.md  LANG.md  PERF.md  PLAN-COMPLEX.md  PLAN.md  README.md  TURBOQUANT.md  build.rs  netlify.toml  package.json  pnpm-lock.yaml
.changeset/: config.json  olive-poems-shine.md  plot-line-explicit-x.md  spotty-eagles-remain.md  tidy-months-slice.md  uniform-inputs-p1.md
.claude/skills/noise-demos/: SKILL.md
.claude/skills/noise-lang/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/noise-cli/: Cargo.toml  README.md  build.rs
crates/noise-cli/src/: main.rs
crates/noise-core/: Cargo.toml  README.md  build.rs
crates/noise-core/benches/: examples.rs  sampling.rs
crates/noise-core/benches/corpus/: mod.rs
crates/noise-core/examples/: bench_table.rs
crates/noise-core/fuzz/: Cargo.toml
crates/noise-core/fuzz/fuzz_targets/: parse.rs
crates/noise-core/src/: approx.rs  ast.rs  backend.rs  builtins.rs  bytecode.rs  compile_cache.rs  conformance.rs  dist.rs  doc.rs  enumerate.rs  error.rs  eval.rs  exec.rs  flint.rs  frontmatter.rs  gpu.rs  input.rs  input_rt.rs  introspect.rs  jit.rs  kernel.rs  lexer.rs  lib.rs  num.rs  observe.rs  parser.rs  profile.rs  reduce.rs  rng.rs  sampler.rs  signal.rs  simplify.rs  stats.rs  sym.rs  value.rs  wasm_emit.rs  wasm_host.rs  wgsl_emit.rs
crates/noise-core/src/eval/: draw_lift.rs  eval_arms.rs  introspect_dispatch.rs  library.rs  ops.rs
crates/noise-core/tests/: adversarial.rs  bench_corpus.rs  cancel.rs  collections.rs  complex.rs  core.rs  document.rs  gpu_backend.rs  introspection.rs  loops_g4c.rs  probability.rs  sampling.rs  shaped_draws.rs  signals.rs  simd_probe.rs  simd_probe_wasm.rs  simd_probe_wasm.wat
crates/noise-core/tests/common/: mod.rs
crates/noise-wasm/: Cargo.toml
crates/noise-wasm/src/: lib.rs
editors/vscode-noise/: README.md  language-configuration.json  package.json
editors/vscode-noise/syntaxes/: noise.tmLanguage.json
examples/: README.md  advantage.noise  am_vs_fm.noise  am_vs_fm_complex.noise  barrier_option.noise  beta_bernoulli.noise  birthday.noise  bootstrap.noise  buffon.noise  clt_normal.noise  coin_streak.noise  conditional_bayes.noise  dice.noise  dice_bet.noise  dice_sum.noise  dithering.noise  exactly_two_heads.noise  functions.noise  insurance.noise  irwin_hall.noise  kelly.noise  max_of_dice.noise  monty_hall.noise  noise_colors.noise  normal_posterior.noise  nyquist.noise  pi.noise  prisoners.noise  qjl_scalar.noise  rare_event.noise  reliability.noise  secretary.noise  shor_period.noise  st_petersburg.noise  turboquant.noise
legacy/: Cargo.toml
legacy/src/: lib.rs  noise_parser.rs
netlify/: install-wasm-pack.sh
plans/: DROP-JIT-API-NOTES.md  DROP-JIT-D0-FINDINGS.md  PLAN-ASYNC.md  PLAN-COLLECTIONS.md  PLAN-COMPLEX.md  PLAN-DROP-JIT.md  PLAN-EXACT.md  PLAN-FINANCE.md  PLAN-FLINT.md  PLAN-INPUTS.md  PLAN-LITERATE.md  PLAN-PERF-2.md  PLAN-PERF-3.md  PLAN-PRECISION.md  PLAN-PREGPU.md  PLAN-SIGNALS.md  PLAN-TECH-DEBT.md  PLAN-UNIFORM-INPUTS.md  PLAN-WEBGPU.md  PLAN.md
plans/flint-demo/: README.md  gen-data.mjs  main.mjs  mapper.mjs  noise-log.json  probe.mjs  render-check.mjs
scripts/: publish-crates.mjs  sync-cargo-version.mjs  validate.sh
src/: ast.rs  engine.rs  main.rs  noice.rs  noice_parser.lalrpop  noice_parser.rs  noise_parser.rs
tools/gpu-spike/: Cargo.toml  RESULTS.md
tools/gpu-spike/src/: main.rs  shapes.rs  wgsl.rs
tools/rng-cert/: Cargo.toml  README.md  RESULTS.md
tools/rng-cert/src/: main.rs
www/: --full-page  AGENTS.md  astro.config.mjs  index.html  noise.js  noise.wasm  package.json  pnpm-lock.yaml  tsconfig.json
www/src/: content.config.ts
www/src/components/: AmFmDemo.astro  BellDemo.astro  BirthdayDemo.astro  CircleDemo.astro  CltDemo.astro  CodePanel.astro  ConceptDemo.astro  DiceDemo.astro  Gallery.astro  GaltonDemo.astro  LargeNumbersDemo.astro  Playground.astro  PrisonersDemo.astro  Scrolly.astro  ScrollyStep.astro  ShaderBackground.astro  ShaderFigure.astro
www/src/content/blog/: hello-noise.mdx
www/src/data/: examples.ts
www/src/layouts/: BlogPost.astro  Layout.astro
www/src/lib/: highlight.ts  noise-lang.ts  noise.ts
www/src/pages/: index.astro  play.astro  skill.astro
www/src/pages/blog/: [...slug].astro  index.astro
www/src/styles/: global.css
