[workspace]
resolver = "2"
members = ["crates/noise-core", "crates/noise-cli", "crates/noise-wasm"]
exclude = ["packages/legacy"]

[workspace.package]
edition = "2021"
version = "0.1.2"
authors = ["Manu Mtz.-Almeida <manu.valladolid@gmail.com>"]
license = "MIT"
repository = "https://github.com/manucorporat/noise-lang"
