[workspace]
resolver = "2"
members = ["crates/noise-core", "crates/noise-cli", "crates/noise-wasm"]
exclude = ["packages/legacy", "crates/noise-core/fuzz"]

[workspace.package]
edition = "2021"
version = "0.1.2"
authors = ["Manu Mtz.-Almeida <manu.valladolid@gmail.com>"]
license = "MIT"
repository = "https://github.com/manucorporat/noise-lang"

# Dependencies shared by 2+ member crates, hoisted so versions can't drift. Feature choices
# (e.g. serde_json's `preserve_order`) stay per-crate.
[workspace.dependencies]
noise-core = { path = "crates/noise-core", version = "0.1.2" }
serde_json = "1"
wasm-bindgen = "0.2"

# Workspace-wide lints (each member opts in with `[lints] workspace = true`). CI runs clippy
# with `-D warnings`, so anything enabled here must be clean on every target.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# The columnar kernels index several parallel columns by lane; the iterator forms clippy
# suggests obscure that. Everything else stays at clippy's defaults.
needless_range_loop = "allow"
