[workspace]
resolver = "2"
members = ["crates/noise-core", "crates/noise-cli", "crates/noise-wasm"]
# `tools/*` are measurement harnesses, not shipped crates: they carry heavy, target-specific deps
# (rng-cert's PractRand driver; gpu-spike's wgpu) that must not enter the workspace lockfile or a
# `cargo build` of the library. Each is its own workspace, run on demand from its own directory.
exclude = ["packages/legacy", "crates/noise-core/fuzz", "tools/rng-cert", "tools/gpu-spike"]

[workspace.package]
edition = "2021"
version = "0.2.0"
authors = ["Manu Mtz.-Almeida <manu.valladolid@gmail.com>"]
license = "MIT"
repository = "https://github.com/manucorporat/noise-lang"

# Dependencies shared by 2+ member crates, hoisted so versions can't drift. Feature choices
# (e.g. serde_json's `preserve_order`) stay per-crate.
[workspace.dependencies]
noise-core = { path = "crates/noise-core", version = "0.2.0" }
serde_json = "1"
wasm-bindgen = "0.2"

# Workspace-wide lints (each member opts in with `[lints] workspace = true`). CI runs clippy
# with `-D warnings`, so anything enabled here must be clean on every target.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# The columnar kernels index several parallel columns by lane; the iterator forms clippy
# suggests obscure that. Everything else stays at clippy's defaults.
needless_range_loop = "allow"
