[package]
name = "noise-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "REPL and file runner for the Noise language."
keywords = ["probabilistic", "monte-carlo", "language", "repl", "sampling"]
categories = ["command-line-utilities", "science", "mathematics"]

[lints]
workspace = true

[[bin]]
name = "noise"
path = "src/main.rs"

[dependencies]
# Ship the native WebGPU backend in the released binary (PLAN-DROP-JIT D2). `noise-core`'s default
# features stay empty — the crate must stay wasm-clean and dependency-light for `noise-wasm`, which
# depends on it WITHOUT `gpu` — so the CLI opts in here rather than making `gpu` a core default. The
# `gpu` feature is itself native-only (wgpu is `cfg(not(wasm32))`), and the CLI is native-only, so
# this is a clean fit; a machine with no usable adapter declines to the interpreter at runtime
# (`gpu::device()` → `None`), so the binary still runs everywhere. This takes the shipped CLI from
# interpreter-only (3868 ms corpus) to the GPU (937 ms), a 4.1× speedup for every user.
noise-core = { workspace = true, features = ["gpu"] }
