[package]
name = "noise-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core of the Noise probabilistic language: lexer, parser, evaluator, sampler."
keywords = ["probabilistic", "monte-carlo", "language", "interpreter", "sampling"]
categories = ["science", "mathematics", "compilers"]

[lints]
workspace = true

[dependencies]
cranelift = { version = "0.127.4", optional = true }
cranelift-jit = { version = "0.127.4", optional = true }
cranelift-module = { version = "0.127.4", optional = true }
cranelift-native = { version = "0.127.4", optional = true }
wasm-encoder = "0.252"

# The plot payload is a Flint `ChartAssemblyInput` — JSON by definition (see `flint.rs`). Building
# it as a `serde_json::Value` is what lets every host (CLI, wasm, a future HTML writer) hand the
# same bytes to the same stock chart compiler.
serde_json = { workspace = true, features = ["preserve_order"] }
serde_norway = "0.9.42"

# Browser-only: the WASM-emitter's host seam (`wasm_host`) calls into JS (`WebAssembly.instantiate`
# the emitted kernel + run it) via wasm-bindgen. Native builds never compile that module, so this
# dependency is wasm32-gated and keeps the native crate wasm-bindgen-free.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
# Browser executor for `reduce` (the `wasm-threads` feature). rayon's pool on wasm32 is a set of Web
# Workers over one shared linear memory — the JS host bootstraps it (see `noise-wasm`), because wasm
# has no instruction that creates a thread.
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
wasmi = "1.1"
# Assembles the hand-written SIMD probe kernel (tests/simd_probe.wat) — see tests/simd_probe.rs.
wat = "1"

# Sampler throughput benchmarks (Phase 4 baseline). `harness = false` hands the binary to
# Criterion. Run with `cargo bench -p noise-core`.
[[bench]]
name = "sampling"
harness = false

[features]
# Native Cranelift JIT backend (Phase 4 "B"). Off by default so the crate stays WASM-clean and
# dependency-light; enable with `--features jit` on a native target. Falls back to the columnar
# interpreter for any graph it can't yet emit, so it never changes results.
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]

# Parallel Monte-Carlo reduction in the browser: fans `reduce`'s chunks out over rayon (a Web Worker
# pool sharing one linear memory). Requires the wasm threads proposal — atomics + shared memory — so
# the crate must be built with `-C target-feature=+atomics,+bulk-memory` and a std rebuilt for it
# (`-Z build-std`), and the page must be cross-origin isolated (COOP/COEP) to get SharedArrayBuffer.
# Off by default: without it wasm32 reduces sequentially, which is correct, just single-threaded.
# Results are bit-identical either way — the executor never changes the answer (see `reduce`).
wasm-threads = ["dep:rayon"]
