[package]
name = "noise-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core of the Noise probabilistic language: lexer, parser, evaluator, sampler."
keywords = ["probabilistic", "monte-carlo", "language", "interpreter", "sampling"]
categories = ["science", "mathematics", "compilers"]

[lints]
workspace = true

[dependencies]
cranelift = { version = "0.127.4", optional = true }
cranelift-jit = { version = "0.127.4", optional = true }
cranelift-module = { version = "0.127.4", optional = true }
cranelift-native = { version = "0.127.4", optional = true }
wasm-encoder = "0.252"

# The plot payload is a Flint `ChartAssemblyInput` — JSON by definition (see `flint.rs`). Building
# it as a `serde_json::Value` is what lets every host (CLI, wasm, a future HTML writer) hand the
# same bytes to the same stock chart compiler.
serde_json = { workspace = true, features = ["preserve_order"] }
serde_norway = "0.9.42"

# Browser-only: the WASM-emitter's host seam (`wasm_host`) calls into JS (`WebAssembly.instantiate`
# the emitted kernel + run it) via wasm-bindgen. Native builds never compile that module, so this
# dependency is wasm32-gated and keeps the native crate wasm-bindgen-free.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
# Browser executor for `reduce` (the `wasm-threads` feature). rayon's pool on wasm32 is a set of Web
# Workers over one shared linear memory — the JS host bootstraps it (see `noise-wasm`), because wasm
# has no instruction that creates a thread.
rayon = { version = "1.10", optional = true }

# The native WebGPU backend (PLAN-WEBGPU G2), behind `--features gpu`. Optional and native-only, so
# the default build stays wasm-clean and dependency-light exactly as it was.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "26", optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
wasmi = "1.1"
# Assembles the hand-written SIMD probe kernel (tests/simd_probe.wat) — see tests/simd_probe.rs.
wat = "1"

# The WGSL emitter's conformance harness (PLAN-WEBGPU G1) actually RUNS the shaders it generates and
# compares them against the interpreter oracle — a shader that merely *parses* proves nothing. Native
# only (there is no wgpu on the wasm32 test target), and dev-only: the emitter itself is pure text
# generation and takes no GPU dependency, so the library stays as light as it was.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wgpu = "26"
pollster = "0.4"

# Sampler throughput benchmarks (Phase 4 baseline). `harness = false` hands the binary to
# Criterion. Run with `cargo bench -p noise-core`.
[[bench]]
name = "sampling"
harness = false

# End-to-end benchmark over the real programs in `examples/` (see benches/examples.rs). Without
# `harness = false` cargo runs this under libtest, which silently ignores Criterion's `main` — the
# bench would "pass" while measuring nothing.
[[bench]]
name = "examples"
harness = false

[features]
# Native Cranelift JIT backend (Phase 4 "B"). Off by default so the crate stays WASM-clean and
# dependency-light; enable with `--features jit` on a native target. Falls back to the columnar
# interpreter for any graph it can't yet emit, so it never changes results.
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]

# Expose `rng`/`approx` under `noise_core::internals` for the measurement harnesses in `tools/`
# (see the module docs in lib.rs). Off by default; carries no semver promise.
internals = []

# Parallel Monte-Carlo reduction in the browser: fans `reduce`'s chunks out over rayon (a Web Worker
# pool sharing one linear memory). Requires the wasm threads proposal — atomics + shared memory — so
# the crate must be built with `-C target-feature=+atomics,+bulk-memory` and a std rebuilt for it
# (`-Z build-std`), and the page must be cross-origin isolated (COOP/COEP) to get SharedArrayBuffer.
# Off by default: without it wasm32 reduces sequentially, which is correct, just single-threaded.
# Results are bit-identical either way — the executor never changes the answer (see `reduce`).
wasm-threads = ["dep:rayon"]

# Native WebGPU backend: the WGSL emitter plus a reduce-driver seam that dispatches whole lane ranges
# to the GPU (see `gpu.rs`). Off by default; native only. Declines any cone it can't lower and any
# forcing whose compile wouldn't pay for itself, falling back to the JIT/interpreter — so, like every
# other backend, it can only ever change speed, never results.
gpu = ["dep:wgpu", "dep:pollster"]
