[package]
name = "noise-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the Noise probabilistic language (browser playground)."
keywords = ["probabilistic", "monte-carlo", "wasm", "language", "sampling"]
categories = ["wasm", "science", "mathematics"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
noise-core.workspace = true
wasm-bindgen.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[package.metadata.wasm-pack.profile.release]
# Smaller, faster-to-load artifact for the browser playground.
wasm-opt = ["-O3"]
