[package]
name = "gpu-spike"
edition = "2021"
version = "0.1.0"
publish = false

# Its own workspace (excluded from the root one): wgpu pulls ~90 crates that have no business in
# the library's lockfile. Run from this directory: `cargo run --release`.
[workspace]

[dependencies]
wgpu = "26"
pollster = "0.4"

# The spike's whole point is proving the WGSL draws match the engine's, bit for bit — so it links
# the real generator rather than transcribing it. `internals` is the harness-only door onto `rng`.
# (The CPU baseline is now the multicore interpreter — the native Cranelift JIT this spike once
# compared against was retired in PLAN-DROP-JIT; the GPU is the native performance backend now.)
noise-core = { path = "../../crates/noise-core", features = ["internals"] }
